# toqito

./: .codecov.yml  .coverage.Davids-Air-2.35640.XDGwtIdx  .coveragerc  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  404.html  BCS-.py  BCS.py  BSC.py  BcS.py  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  LICENSE  Pipfile  README.md  TODO.txt  conftest.py  cycle_benchmarking.py  index.html  linter.sh  main.py  objects.inv  proposal.txt  pyproject.toml  refs.bib  requirements.txt  scratch.py  setup.cfg  setup.py  sitemap.xml  test_BCS.py  toquito_cov.txt  versions.json
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot-automerge.yml  dependabot.yml  funding.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  new_function.md  performance.md  reference_correction.md
.github/workflows/: benchmark.yml  build-test-actions.yml  ci.yml  dependabot-automerge.yml  docs-preview.yml  docs.yml  publish-release.yml  requirements.txt  update-copyright-year.yml
1.1.7/: 404.html  index.html  sitemap.xml
1.1.7/contributing-guide/: index.html
1.1.7/getting-started/: index.html
1.1.7/references/: index.html
1.1.7/search/: search_index.json
1.2.0/: 404.html  index.html  refs.bib  sitemap.xml
1.2.0/contributing-guide/: index.html
1.2.0/getting-started/: index.html
1.2.0/references/: index.html
1.2.0/search/: search_index.json
1.3.0/: 404.html  index.html  sitemap.xml
1.3.0/contributing-guide/: index.html
1.3.0/getting-started/: index.html
1.3.0/references/: index.html
1.3.0/search/: search_index.json
1.3.1/: 404.html  index.html  sitemap.xml
1.3.1/contributing-guide/: index.html
1.3.1/getting-started/: index.html
1.3.1/references/: index.html
1.3.1/search/: search_index.json
assets/: extra.css
binder/: postBuild
code-of-conduct/: index.html
contributing-guide/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/contributing-guide/: index.html
dev/getting-started/: index.html
dev/references/: index.html
dev/search/: search_index.json
docs/: Makefile  api.rst  articles.bib  autoapi_members.rst  base.rst  books.bib  channels.channels.rst  channels.operations.rst  channels.rst  code_of_conduct.rst  conf.py  contributing.rst  core.core.rst  core.rst  examples.conclusive_state_exclusion.rst  examples.nonlocal_quantum_lower_bound.rst  examples.rst  examples.state_distinguishability.rst  examples.superdense_coding.rst  examples.xor_quantum_value.rst  getting_started.md  getting_started.rst  helper.helper.rst  helper.rst  index.rst  install.md  install.rst  intro_tutorial.rst  linear_algebra.matrices.rst  linear_algebra.operations.rst  linear_algebra.rst  matrices.rst  measurements.rst  mkdocs.yml  modules.rst  nonlocal_games.coin_flipping.rst  nonlocal_games.nonlocal_games.rst  nonlocal_games.quantum_hedging.rst  nonlocal_games.quantum_money.rst  nonlocal_games.rst  (+42 more)
docs/_autosummary/: toqito.channel_metrics.channel_fidelity.rst  toqito.channel_metrics.completely_bounded_spectral_norm.rst  toqito.channel_metrics.completely_bounded_trace_norm.rst  toqito.channel_metrics.diamond_norm.rst  toqito.channel_metrics.fidelity_of_separability.rst  toqito.channel_metrics.sqrt_channel_fidelity.rst  toqito.channel_ops.apply_channel.rst  toqito.channel_ops.apply_map.rst  toqito.channel_ops.choi_to_kraus.rst  toqito.channel_ops.dual_channel.rst  toqito.channel_ops.kraus_to_choi.rst  toqito.channel_ops.partial_channel.rst  toqito.channel_ops.partial_map.rst  toqito.channel_props.choi_rank.rst  toqito.channel_props.is_completely_positive.rst  toqito.channel_props.is_herm_preserving.rst  toqito.channel_props.is_positive.rst  toqito.channel_props.is_quantum_channel.rst  toqito.channel_props.is_trace_preserving.rst  toqito.channel_props.is_unital.rst  toqito.channel_props.is_unitary.rst  toqito.channels.choi.rst  toqito.channels.dephasing.rst  toqito.channels.depolarizing.rst  toqito.channels.partial_trace.rst  toqito.channels.partial_trace_cvx.rst  toqito.channels.partial_transpose.rst  toqito.channels.realignment.rst  toqito.channels.reduction.rst  toqito.matrices.clock.rst  toqito.matrices.cnot.rst  toqito.matrices.cyclic_permutation_matrix.rst  toqito.matrices.fourier.rst  toqito.matrices.gell_mann.rst  toqito.matrices.gen_gell_mann.rst  toqito.matrices.gen_pauli.rst  toqito.matrices.hadamard.rst  (+129 more)
examples/: BB84.py  README.rst  README.txt  example_contributing.py  example_extended_nonlocal_games.py  example_non_local_game.py  example_state_distinguishability.py  example_state_exclusion.py  example_xor_quantum_value.py
figures/: alice_and_bob.tex
getting-started/: index.html
mkdocs/: mkdocs.yml
myenv/: pyvenv.cfg
paper/: paper.bib  paper.md
references/: index.html
search/: search_index.json
tests/: __init__.py  swap.py  swap_operator.py  test_antisymmetric_projection.py  test_apply_map.py  test_bell.py  test_bra.py  test_channel_ops.py  test_channel_props.py  test_channels.py  test_chessboard.py  test_chessboard_state.py  test_choi_map.py  test_cnot.py  test_conclusive_state_exclusion.py  test_concurrence.py  test_counterfeit_attack.py  test_cvx_helper.py  test_cvxpy_helper.py  test_dephasing_channel.py  test_depolarizing_channel.py  test_domino.py  test_entropy.py  test_fidelity.py  test_fourier_matrix.py  test_gell_mann.py  test_gen_bell.py  test_gen_gell_mann.py  test_gen_pauli.py  test_ghz.py  test_ghz_state.py  test_gisin.py  test_gisin_state.py  test_hadamard.py  test_hedging_sdps.py  test_hedging_value.py  test_helper.py  test_helstrom_holevo.py  test_horodecki.py  test_horodecki_state.py  (+86 more)
toqito/: __init__.py  channel_ops.py  channel_props.py  channels.py  helper.py  matrices.py  matrix_ops.py  matrix_props.py  measurement_ops.py  measurement_props.py  perms.py  random.py  state_distinguish.py  state_metrics.py  state_ops.py  state_opt.py  state_props.py  states.py
toqito.com/: README.md  index.html
toqito_landing_page/: README.md
toquito_landing_page/: Roadmap.md  hugo.toml
(+12335 files in other folders)
