[tool.poetry]
name = "toqito"
version = "1.1.1"
description = "Python tools for the study of quantum information."
authors = ["Vincent Russo <vincentrusso1@gmail.com>"]
maintainers = ["Vincent Russo <vincentrusso1@gmail.com>, Purva Thakre <purva.athakre@gmail.com>"]
readme = "README.md"
homepage = "https://vprusso.github.io/toqito/"
repository = "https://github.com/vprusso/toqito"
keywords = ["quantum information", "quantum computing", "nonlocal games"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
cvxpy = "1.6.2"
more-itertools = "10.6.0"
numpy = "2.2.3"
scipy = "1.15.2"
scs = "3.2.7.post2"
picos = "2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-cov = "6.0.0"
coverage = "7.7.0"
sympy = "1.13.3"
distlib = "0.3.9"
ipython = "8.34.0"
setuptools = ">65.5.1"
pre-commit = ">=3.0.0"

[tool.poetry.group.lint.dependencies]
flake8 = "7.1.2"
flake8-docstrings = "1.7.0"
isort = "6.0.0"
myst-parser = "4.0.1"
pep8 = "1.7.1"
ruff = "0.11.0"
mypy = "1.15.0"

[tool.poetry.group.docs.dependencies]
readthedocs-sphinx-ext = "*"
sphinx = "8.1.3"
furo = "2024.8.6"
sphinxcontrib-bibtex = "2.6.3"
sphinx-autoapi = "3.6.0"
sphinx-copybutton = "0.5.2"

[build-system]
requires = ["setuptools","poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
exclude = ["__init__.py"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["I", "E", "W", "D", "PL", "F"]
# ruff configuration
# E, W -- pycodestyle
# D -- pydocstyle
# I -- isort
# PL -- pylint
# F -- pyflakes

# Rules considered over other incompatible ones
exclude = ["docs/conf.py", "setup.py"]

ignore = ["D407", "D203", "D213", "D416", "PLR0912", "PLR0911", "PLR0915", "PLR2004", "PLR0913", "F811"]
# Rules Ignored

# D407 - Ignored because ==== under a section heading is considered as a missing underline.
# pydocstyle considers ----- an underline.

# D212 and D211 specially selected due to following incompatibilities
# warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`.
# warning: `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`.

# D416 was adding a semicolon after some section headings when ruff's automated --fix was was used
# As this was not added evenly after all section headings, we ignore this. 

# PLR0912 -- Checks for functions or methods with too many branches. The default number is 12. 
# PLR0911 -- Checks for functions or methods with too many return statements. The default number is 6.
# PLR0915 -- Checks for functions or methods with too many statements. The default number is 50. 
# PLR2004 -- Checks if an equality or an inequality is compared to a variable or a num (prefers variable pre)
# PLR0913 Too many arguments in function definition
# F811 -- Checks for variable definitions that redefine (or "shadow") unused variables 
# It was removing definitions with the same name creating conflicts in test_is_stochastic.py

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I001", "F401"]
# I001 - skip checking Import block is un-sorted or un-formatted
# F401 - Checks for unused imports, applying fixes to __init__.py currently under review
